# glowing-bear

./: .babelrc  .dockerignore  .editorconfig  .gitignore  .jshintrc  .travis.yml  CNAME  Dockerfile  README.md  bower.json  electron-globals.js  electron-main.js  electron-start.html  electron.makefile  emojione.min.js  emojione.min.js.LICENSE.txt  index.html  linkify-string.min.js  linkify.min.js  main.js  main.js.LICENSE.txt  main.js.map  manifest.json  manifest.webapp  min.js  min.js.map  min.map  package-lock.json  package.json  run_tests.sh  serviceworker.js  webapp.manifest.json  webpack.config.js  websockets.html  websockets.js  wrangler.toml
.github/workflows/: codeql-analysis.yml
css/: glowingbear.css  style.css  teddy.css  weechat.css
css/themes/: base16-default.css  base16-lunarized-dark.css  base16-lunarized-light.css  base16-mocha-light.css  base16-solarized-light.css  base16-terranized-east-dark.css  base16-terranized-east-light.css  base16-terranized-north-dark.css  base16-terranized-north-light.css  base16-terranized-south-dark.css  base16-terranized-south-light.css  base16-terranized-west-dark.css  base16-terranized-west-light.css  black.css  blue.css  dark-spacious.css  dark.css  light.css  modern-ish.css
directives/: bufferline.html  input.html  plugin.html
glowing-bear/: manifest.webapp  min.js  min.js.map  min.map
js/: app.js  bufferResume.js  connection.js  file-change.js  filters.js  glowingbear.js  handlers.js  imgur-drop-directive.js  imgur.js  inputbar.js  irc-utils.js  localstorage.js  models.js  notifications.js  plugin-directive.js  plugins.js  protocol.js  protocolmodule.js  settings.js  teddy.js  utils.js  websockets.js  weechat-protocol.js  weechat.js
src/: context-menu.js  electron-globals.js  electron-main.js  index.html  main.js  main2.js  manifest.json  manifest.webapp  menu.js  serviceworker.js  tray.js  webapp.manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src/css/: glowingbear.css
src/directives/: plugin.html
src/js/: buffer-resume.service.js  bufferResume.js  codify.filter.js  connection.factory.js  connection.js  file-change.directive.js  filters.js  glowingbear.js  handlers.factory.js  handlers.js  imgur-drop-directive.js  imgur-drop.directive.js  imgur.factory.js  inlinecolour.filter.js  input-bar.directive.js  inputbar.js  irc-utils.js  irclinky.filter.js  latexmath.filter.js  misc.js  models.js  notifications.js  plugin-directive.js  plugins.js  settings.js  (+6 more)
templates/: glowingbear.html  index.html
test/: karma.conf.js  protractor-conf.js
(+12 files in other folders)
